# symbolic-differentiator

./: .flake8  .gitignore  LICENSE  README.md  demo.py  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
symbolic_diff/: __init__.py  differentiator.py  parser.py  simplifier.py  tokenizer.py
symbolic_diff/tests/: test_differentiator.py  test_parser.py  test_simplifier.py  test_tokenizer.py
