[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symbolic-diff"
version = "0.1.0"
authors = [
  { name="Ishan Mukherjee", email="ishanjmukherjee@gmail.com" },
]
description = "A symbolic differentiation library for Lisp-style s-expressions"
readme = "README.md"
requires-python = ">=3.11"  
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ishanjmukherjee/symbolic-differentiator"
"Bug Tracker" = "https://github.com/ishanjmukherjee/symbolic-differentiator/issues"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=symbolic_diff --cov-report=term-missing"

[tool.isort]
profile = "black"  
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88  # Black's default line length
skip = ["venv", ".env", "env"]